--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "@auth/prisma-adapter": "^1.0.12",
+    "@dnd-kit/core": "^6.3.1",
     "@faker-js/faker": "^8.4.1",
+    "@hello-pangea/dnd": "^17.0.0",
     "@hookform/resolvers": "^3.3.4",
     "@iconify/react": "^4.1.1",
     "@prisma/client": "^5.7.1",
@@ -43,7 +45,10 @@
     "@radix-ui/react-toggle-group": "^1.0.4",
     "@radix-ui/react-tooltip": "^1.0.7",
     "@react-hook/window-size": "^3.1.1",
+    "@tanstack/react-query": "^5.65.1",
     "@tanstack/react-table": "^8.16.0",
+    "@types/jspdf": "^1.3.3",
+    "@types/react-dnd": "^2.0.36",
     "@uploadthing/react": "^6.5.4",
     "axios": "^1.6.8",
     "bcrypt": "^5.1.1",
@@ -54,6 +59,7 @@
     "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.0.4",
+    "file-saver": "^2.0.5",
     "framer-motion": "^11.2.0",
     "input-otp": "^1.2.4",
     "jotai": "^2.8.2",
@@ -64,6 +70,8 @@
     "next-themes": "^0.2.1",
     "react": "^18",
     "react-day-picker": "^8.10.0",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18",
     "react-hook-form": "^7.51.3",
     "react-icons": "^4.12.0",
@@ -86,6 +94,7 @@
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
     "@types/bcryptjs": "^2.4.6",
+    "@types/file-saver": "^2.0.7",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
