--- a/package.json
+++ b/package.json
@@ -82,6 +82,7 @@
     "recharts": "^2.12.5",
     "resend": "^2.1.0",
     "sonner": "^1.4.41",
+    "swr": "^2.3.2",
     "tailwind-merge": "^2.2.0",
     "tailwindcss-animate": "^1.0.7",
     "uploadthing": "^6.10.4",
